# Genre-Classification

./: .gitignore  README.md  genre_classification-SiddharthSaxena_AndreasPapaeracleous.ipynb  mood_classification-SiddharthSaxena.ipynb  pyproject.toml  requirements.txt
